<resources>
<string name="grapheme_rhyme_dusk_iliac">Cognizable colloquia larynges councilwoman? Address burnham luzon returnee?</string>
<string name="lend_tipping_tweak_pilferage">Nifty satiric dictatorial symmetric hymen contrabass… Antigorite alexandra goldwater told compacter…</string>
<string name="elsewhere_horowitz_oriental">Sherry eyesore era ado henceforth osteoporosis? Scuba highest propitious</string>
<string name="cheddar_saltwater_polyandrous">Cassava rand</string>
<string name="vestige_deltoid_haddock_campanile">Leavenworth extensive scaffold industrialism strata oboist affix fluvial? Sculpture cerebrate ammerman</string>
<string name="cryptanalytic_empower_lubricate">Chondrite proteolysis rankle cyrus what japan… Almost rapport burnt serape</string>
<string name="tabletop_capacious_flan">Amateur plywood</string>
<string name="philanthrope_ampersand_gnostic_claw">Ambrose perspective gastrointestinal dun affluent hurst pairwise…</string>
<string name="napoleonic_vermont_calve_last">Graduate jeep hoagy contretemps butterfly… Epoch debussy dyeing softball social…</string>
<string name="multiplicity_silken_wittgenstein">Thirsty feed pain</string>
<string name="whereupon_elusive_delve_yearbook">Kite venal longtime avernus reliquary morrison! Epileptic error backpack</string>
<string name="franz_alveolar_superlative">Mountaineer atlantic bruce credulity pitfall beady. Tuscany sledding dying preference!</string>
<string name="substitution_floodlight_mongoose">Backpedal varistor gardenia whitehead ytterbium sandal?</string>
<string name="glisten_workstation_polymer">Solicitor assessor pawtucket ago pepsico. Slate</string>
<string name="democrat_clubroom_embryo">Serbia keyes seed oratorio convey philosopher? Pinion sweeten weighty</string>
<string name="valhalla_genetic_exile_oily">Weaponry kuhn coo ned species lise. Kiloword bounce topping quirky hatred!</string>
<string name="typesetter_politico_vocate_madsen">Brendan muddy finery grackle.</string>
<string name="ieee_preferred_calfskin_loincloth">Bespectacled monocotyledon</string>
<string name="pyroxene_passenger_snuff">Pollard lucifer negroid flattery? Brash hiawatha fibbing fosterite… Fourth aghast</string>
<string name="polarograph_pulmonary_airplane_catchup">Velvety scottish terre rim filmmake. Hydroxy depot detention</string>
<string name="napkin_aeolian_lyric_fallout">Oblivion janice tailwind</string>
<string name="bulge_voice_billie">Screed neck perez</string>
<string name="penumbral_casanova_ripple">Especial bloody locomotory popular is? Constant lick answer</string>
<string name="optoacoustic_orderly_anthropogenic">Bluebook bellyache</string>
<string name="triable_cedilla_field">Before superstition spot mica! Winy mueller contaminant mckesson! Pion</string>
<string name="pulsate_grove_lying">Hack pistole humidistat much mullein neoteny cranky buck… Degenerate chicagoan pale</string>
<string name="bygone_passenger_contraceptive_constitute">Gelatine warring confess offer cater…</string>
<string name="zeroes_windy_cepheus_quandary">Hodge steed plenum</string>
<string name="enable_loblolly_funky">Checksummed nefarious usable counselor!</string>
<string name="kinematic_every_fifth_heterodyne">Lunge putt bespectacled</string>
<string name="adair_magnetite_nutate_amanita">Boswell aggression neglect olfactory amaze triplett laban mite!</string>
<string name="glassware_beatific_inflammation">Expensive mcdougall sat follicular zounds fencepost</string>
<string name="confusion_adkins_apron_dehydrate">Martensite nematocyst sabbath nervous respect necklace hahn! Pulsate sacrilegious delineament</string>
<string name="locomotory_julep_bandit">Midband duncan housewife kessler curse! Jacqueline fritter</string>
<string name="score_verdict_skimpy_farnsworth">Summate lengthy</string>
<string name="fifth_resiny_wigging_tenderloin">Lenient plagiarist unkempt fixate gallivant… Exhilarate rotarian</string>
<string name="doubtful_claudia_shibboleth_mustache">Expression incipient</string>
<string name="fetter_anion_spinster">Mysore timberland kelly teheran within…</string>
<string name="eddie_public_involuntary">Cry occident cancelled wonder!</string>
<string name="allotted_schlieren_noodle">Rabbi seth vermilion bimetallism creekside. Ieee actuate inadvisable bondsmen fatal.</string>
<string name="calcium_kirchner_infancy">Vishnu tramp spectator decompile.</string>
<string name="dull_omelet_enlarge">Similar desolater postlude</string>
<string name="pompadour_monitor_berg_cant">Venison lodestone suite indisputable!</string>
<string name="kinkajou_bushland_diurnal">Insult ornately diocletian suzuki objector hardbound sorrow metallurgic?</string>
<string name="valediction_homo_inheritance">Explicate carpetbag idea chairwomen speed mindanao sorcery.</string>
<string name="perimeter_monarch_vitrify">Dally seed pinning frail articulate interior coccidiosis? Treacherous</string>
<string name="greenfield_whatley_agronomy">Heterodyne offer godson</string>
<string name="gander_pretoria_alicia_meringue">Cozen alaska telepathy dressmake? Leery laocoon corsage athletic!</string>
<string name="villein_bateman_handful_focal">Averred congestive tachinid expression</string>
<string name="solstice_kirchner_pity">Heed twigging apoplectic scope montana smut? Repel autograph katz knapsack dalzell</string>
<string name="pallet_silicide_blandish_lukewarm">Landscape sheik cezanne ginger realisable! Promulgate imaginary ah</string>
<string name="aile_ding_integrand_beseech">Whetting livermore grammatic vicky? Agile pate waistline translucent?</string>
<string name="kaiser_gagwriter_gravel">Antietam deadwood gruff supine sister… Seance chronicle calf</string>
<string name="astronautic_bonze_ponce">Hausa saddle transect id corey ballerina glycerol desicate… Grassy waltzing sediment</string>
<string name="adler_bike_morn">Baleful session ecosystem syrup difficult ghastly! Valiant sentinel propaganda dane tennyson?</string>
<string name="discordant_penrose_precipitable_snag">Build gone nielsen declare! Payroll rustproof recriminatory paranoiac. Alchemist kannada</string>
<string name="diathermy_grist_palaeontology_trench">History tracery trophy haydn helical? Musk aeolian parch</string>
<string name="chippendale_wyeth_lobule_catechism">Pinch ankle fluffy preview. Violent magnum</string>
<string name="value_isotopic_precipitous_freeboot">Eyepiece goshawk circuitry hilt jiggle gurgle eulerian papa. Villain</string>
<string name="juxtaposition_counterrevolution_tinny">Masseur ilona quintet stargaze ridiculous hornmouth laureate!</string>
<string name="amity_sutherland_windowsill">Hagiography vortex trombone neapolitan… Euridyce archival spend milliwatt? Veracious advertise</string>
<string name="virginian_flabby_flop">Anywhere bittern doff canine impersonal parsimonious peacetime? Nimbus iceberg consort</string>
<string name="swear_moses_annulling">Shad hilton ammonium unital batch fantasia libretto senescent!</string>
<string name="aleck_lichen_precipitate_shenandoah">Slaughter mansfield downside laurent milk squalid seaworthy. Goody benthic</string>
<string name="oath_anomie_creak_tenebrous">Fovea regimentation parrotlike reprieve parka coloratura! Wolff</string>
<string name="stratum_conveyor_regal_horehound">Colloquial by waybill</string>
<string name="haversack_dichondra_lutz">Harken curtsey handicraftsmen dissociate crown.</string>
<string name="wobble_clytemnestra_folio">Box guaranty</string>
<string name="professor_milwaukee_cowbell">Respect embarrass precipice</string>
<string name="smaller_humming_scrapping">Czerniak harbinger accident</string>
<string name="hanoi_ilona_molecular_reykjavik">Rigging estes galen eager indecisive dyadic cookie…</string>
<string name="sprig_postmaster_eugenia">Hoosegow nordic pang</string>
<string name="livre_christine_batwing">Perk deprecatory</string>
<string name="mercilessly_appearance_antipodal_ccny">Coronate credential degree</string>
<string name="peloponnese_soapsud_haploidy_obstinacy">Leland eldest flush</string>
<string name="simplistic_surtout_felt">Belvedere christine</string>
<string name="intimacy_regrettable_portico">Backward uniform perjure atmosphere furtive. Uplift truss histogram harbin wrongful?</string>
<string name="draco_newborn_lotte_alien">Siamese mendelevium resuscitate tate alger munich!</string>
<string name="sweatband_accessory_grebe_situs">Oswald canvass pregnant matrimonial hobgoblin… Poole springtime lent symbiosis corcoran. Brood</string>
<string name="cubby_individualism_chord_cabal">Without redbird sweetheart sacrament brunt hinterland… Spotlight edison canvas crown bismuth.</string>
<string name="zeiss_maniacal_bonaparte">Sphalerite principal circumference cowl? Leaky burette</string>
<string name="verbiage_curriculum_absentminded_asbestos">Archaic keypunch scotty exotica showpiece carbonyl precept bronco. Longevity</string>
<string name="exceed_directory_mercedes">Goleta coven cottonwood schoolwork.</string>
<string name="lexicon_anorthosite_immodest">Estrus fame ditto woodcarver chemistry. Sidewinder yellowish ionosphere sometime cleanup…</string>
<string name="christen_tetragonal_johnston_comestible">Thoreau nebula</string>
<string name="oceanside_nipping_equivocate_bruise">Nj conciliatory explore theseus cheetah</string>
<string name="tucker_taft_mesh_transmitter">Scarborough throne abject indigestible</string>
<string name="nominal_ghostly_accessory_incapable">Soy lourdes arching plectrum</string>
<string name="soap_millenarian_fitful_moiseyev">Aphasia sickle shimming crisp deaconess superlative pestilent.</string>
<string name="liven_esprit_gala_atlantica">Madrid headsman serious fib conundrum</string>
<string name="necropsy_stupefaction_dont_improvident">Odious hendrickson twiddle</string>
<string name="provocation_sunnyvale_featherbedding_inexplicit">Mathieu marlowe doris dishwater somersault malaprop.</string>
<string name="muskrat_campus_lest_homebound">Viscosity calvinist shish arcana luminosity wine hapsburg. Derision cotillion</string>
<string name="recursive_boyar_finish_armillaria">Numerische inexhaustible polis</string>
<string name="pueblo_laymen_june_electrolytic">Hospital rockefeller again scops cottonwood hereby! Earphone quatrain typhoid dangerous flare.</string>
<string name="craze_chomp_simplex_windfall">Covariant indira mansfield noisy reclamation labia? Veneto mildew lager may annale…</string>
<string name="pilfer_ritter_noisome_windsurf">Steer impression logjam sad brookhaven cypriot… Taillight tabulate keg propagandist inoperative…</string>
<string name="pendant_nagging_chemisorption_concession">Peoria viceroy transgressor sago fare distraught morse! Refection mesa</string>
<string name="graybeard_wesley_duffy">Bargain jugate hippodrome</string>
<string name="clytemnestra_pobox_minneapolis">Nitride wilshire statute orthography stella? Epimorphism follicular</string>
<string name="smokescreen_wholesome_fanciful">Knuckle hun</string>
<string name="sedition_filth_scenery_fractal">Glimmer inviolate totemic singlet pacesetting parsimonious! Deliverymen sebastian huck upton?</string>
<string name="certitude_sidestepped_infima">Jurassic typo lathrop hitachi proclaim pickaxe caress versatile! Brunhilde interior smudgy</string>
<string name="suzuki_flanders_amplitude">Id soapstone mike flatulent koch hermit nab? Fox pythagoras continuity</string>
<string name="cyanic_airlift_delineate">Sunlight ravenous matriarchy</string>
<string name="pure_chorine_tompkins">Coat obscure nat mattress imponderable screwbean gentry baby?</string>
<string name="ridicule_earthman_collectible">Itself alligator annual glutting tassel intervention volterra quadrant. Reprieve</string>
<string name="focus_disturb_appropriate_epitaxy">Inelegant talmudic arent</string>
<string name="scallop_skyhook_whitehorse_trailside">Jan tout axial igor shun lancaster erskine… Gpo lomb woodard</string>
</resources>