<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<LinearLayout android:gravity="center" android:id="@+id/foundryWhitehallLayout" android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="vertical" android:paddingTop="@dimen/fundraise_monogamy_size" app:layout_constraintBottom_toTopOf="@id/effusiveLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
<CheckedTextView android:background="@color/centrifugate_drugging_conferee" android:hint="@string/tucker_taft_mesh_transmitter" android:id="@+id/ligandFuneraryView" android:layout_height="wrap_content" android:layout_margin="@dimen/minuteman_petroleum_height" android:layout_width="wrap_content" android:text="@string/pompadour_monitor_berg_cant" android:textSize="@dimen/abrade_isaiah_textsize"/>
<Button android:background="@color/ascendant_benign_chautauqua" android:hint="@string/livre_christine_batwing" android:id="@+id/bylawEverywhereView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/score_verdict_skimpy_farnsworth" android:textSize="@dimen/quichua_tarnish_textsize"/>
<CheckedTextView android:background="@color/gory_clinging_protocol" android:hint="@string/bulge_voice_billie" android:id="@+id/acornPersistentView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/valediction_homo_inheritance" android:textColor="@color/hungary_contravariant_paragraph" android:textSize="@dimen/above_therell_textsize"/>
<AutoCompleteTextView android:background="@color/persian_oracle_preachy" android:hint="@string/locomotory_julep_bandit" android:id="@+id/euclidView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/rental_saxon_width" android:text="@string/optoacoustic_orderly_anthropogenic" android:textColor="@color/loudspeaking_geodetic_tabulate"/>
</LinearLayout>
<LinearLayout android:gravity="center_horizontal|end" android:id="@+id/effusiveLayout" android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/yeomenMimesisView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/foundryWhitehallLayout">
<AutoCompleteTextView android:background="#94F60E" android:hint="@string/enable_loblolly_funky" android:id="@+id/angelfishTrinidadView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/scallop_skyhook_whitehorse_trailside" android:textColor="#D03AC175" android:textSize="@dimen/dither_meat_textsize"/>
<AutoCompleteTextView android:background="@color/extol_dowry" android:hint="@string/kaiser_gagwriter_gravel" android:id="@+id/byersView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/continuum_strikebreak_width" android:text="@string/discordant_penrose_precipitable_snag" android:textColor="@color/analysis_gray"/>
<EditText android:background="@color/waals_convect_gelatin" android:hint="@string/aile_ding_integrand_beseech" android:id="@+id/plagiarismCalvinistView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/intimacy_regrettable_portico" android:textColor="@color/anaglyph_nautical_toolkit" android:textSize="@dimen/surrogate_people_textsize"/>
<Button android:background="@color/atlas_conjoin_downspout" android:hint="@string/pueblo_laymen_june_electrolytic" android:id="@+id/twinkleView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/cubby_individualism_chord_cabal" android:textColor="#C4FADB"/>
<TextView android:background="@color/grotto_embody_input" android:hint="@string/swear_moses_annulling" android:id="@+id/jiggingView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/ieee_preferred_calfskin_loincloth" android:textColor="@color/angles_spleen_gordian"/>
<AutoCompleteTextView android:hint="@string/simplistic_surtout_felt" android:id="@+id/aperiodicHancockView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/mercilessly_appearance_antipodal_ccny" android:textColor="@color/laxative_tube_moron"/>
<CheckBox android:background="#55FAB1" android:hint="@string/lexicon_anorthosite_immodest" android:id="@+id/intangibleView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/astronautic_bonze_ponce" android:textColor="@color/leaven_torr_vivo"/>
<Button android:background="@color/angles_spleen_gordian" android:hint="@string/calcium_kirchner_infancy" android:id="@+id/pigmentationAnnulledView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/turnaround_gasohol_width" android:text="@string/stratum_conveyor_regal_horehound" android:textColor="@color/perfusion_infringe_hard"/>
<AutoCompleteTextView android:background="@color/strum_timber_pneumococcus" android:hint="@string/kinematic_every_fifth_heterodyne" android:id="@+id/schlossFelonyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/sprig_postmaster_eugenia" android:textColor="#2DAC15FA" android:textSize="@dimen/cecilia_forgive_textsize"/>
<LinearLayout android:gravity="center_horizontal|start" android:id="@+id/riordanLayout" android:layout_height="wrap_content" android:layout_margin="@dimen/sunshiny_sebastian_width" android:layout_width="wrap_content" android:orientation="vertical">
<AutoCompleteTextView android:background="@color/testy_gordon_planning" android:hint="@string/haversack_dichondra_lutz" android:id="@+id/oneselfView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingEnd="@dimen/surcease_midwinter" android:paddingStart="@dimen/bucolic_habitat_height" android:text="@string/pulsate_grove_lying" android:textColor="#7BE9ED08"/>
<CheckBox android:background="@color/perfusion_infringe_hard" android:hint="@string/glassware_beatific_inflammation" android:id="@+id/stoveView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/catabolic_capacious_width" android:paddingEnd="42dp" android:paddingStart="@dimen/gilchrist_incendiary_width" android:text="@string/necropsy_stupefaction_dont_improvident" android:textColor="@color/extol_dowry"/>
<AutoCompleteTextView android:background="@color/perfusion_infringe_hard" android:hint="@string/gander_pretoria_alicia_meringue" android:id="@+id/bacchusBobolinkView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/virginian_flabby_flop" android:textColor="@color/tear_adulterate" android:textSize="@dimen/team_visor_textsize"/>
</LinearLayout>
<TextView android:hint="@string/adler_bike_morn" android:id="@+id/squeamishView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingTop="@dimen/rimming_locomotor" android:text="@string/smokescreen_wholesome_fanciful" android:textColor="#D1198492"/>
</LinearLayout>
<TextView android:hint="@string/typesetter_politico_vocate_madsen" android:id="@+id/yeomenMimesisView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/chippendale_wyeth_lobule_catechism" android:textColor="@color/venusian_pare" app:layout_constraintBottom_toTopOf="@id/methuselahCelibacyView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/effusiveLayout"/>
<CheckedTextView android:background="#82F4E4" android:hint="@string/fifth_resiny_wigging_tenderloin" android:id="@+id/methuselahCelibacyView" android:layout_height="wrap_content" android:layout_width="0dp" android:padding="@dimen/peruse_bordeaux" android:text="@string/zeroes_windy_cepheus_quandary" android:textColor="@color/peacemake_deborah_paranoid" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/yeomenMimesisView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
