<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<EditText android:background="@color/eurasia_blowfish" android:hint="@string/verbiage_curriculum_absentminded_asbestos" android:id="@+id/cauchyView" android:inputType="phone" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/ridicule_earthman_collectible" android:textColor="#978918A5" android:textSize="@dimen/crepe_bertram_textsize" app:layout_constraintBottom_toTopOf="@id/feloniousFungusView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<TextView android:background="#9EF650" android:hint="@string/oceanside_nipping_equivocate_bruise" android:id="@+id/feloniousFungusView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/smaller_humming_scrapping" android:textColor="@color/ascendant_benign_chautauqua" app:layout_constraintBottom_toTopOf="@id/lawbreakOctaneLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cauchyView"/>
<LinearLayout android:gravity="center_vertical" android:id="@+id/lawbreakOctaneLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/illogicView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/feloniousFungusView">
<CheckBox android:hint="@string/pure_chorine_tompkins" android:id="@+id/chinquapinIllumineView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingBottom="@dimen/pursuit_moran_padding" android:paddingEnd="@dimen/atomic_lass_padding" android:paddingStart="@dimen/opprobrium_travesty_padding" android:text="@string/bygone_passenger_contraceptive_constitute" android:textColor="@color/wagonload_bookworm_dichotomous"/>
<Button android:background="@color/boreal_askance" android:hint="@string/clytemnestra_pobox_minneapolis" android:id="@+id/payneStockroomView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/pendant_nagging_chemisorption_concession" android:textColor="#D2030244"/>
<LinearLayout android:gravity="bottom" android:id="@+id/salivateLayout" android:layout_height="match_parent" android:layout_width="wrap_content" android:orientation="horizontal">
<CheckBox android:background="@color/eurasia_blowfish" android:hint="@string/cyanic_airlift_delineate" android:id="@+id/shallotSiderealView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/greenfield_whatley_agronomy" android:textColor="@color/laxative_tube_moron"/>
<EditText android:background="#E9F40D02" android:hint="@string/valhalla_genetic_exile_oily" android:id="@+id/legatoHettieView" android:inputType="text" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/napkin_aeolian_lyric_fallout"/>
<Button android:background="#213270" android:hint="@string/kinkajou_bushland_diurnal" android:id="@+id/grandnephewView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/craze_chomp_simplex_windfall"/>
<CheckBox android:background="@color/grotto_embody_input" android:hint="@string/soap_millenarian_fitful_moiseyev" android:id="@+id/iconFolkView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/provocation_sunnyvale_featherbedding_inexplicit" android:textSize="@dimen/natchez_ambassador_textsize"/>
<AutoCompleteTextView android:background="@color/perfusion_infringe_hard" android:hint="@string/christen_tetragonal_johnston_comestible" android:id="@+id/stantonView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/jude_laxative_height" android:layout_width="wrap_content" android:text="@string/triable_cedilla_field" android:textSize="@dimen/sharpen_twilight_textsize"/>
<EditText android:background="@color/demijohn_primitivism_squibb" android:hint="@string/eddie_public_involuntary" android:id="@+id/clownView" android:inputType="textCapCharacters" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/title_forthcome" android:layout_width="wrap_content" android:text="@string/adair_magnetite_nutate_amanita" android:textSize="@dimen/bodleian_entendre_textsize"/>
<AutoCompleteTextView android:background="@color/actual_reason" android:hint="@string/amity_sutherland_windowsill" android:id="@+id/dougCessionView" android:layout_height="match_parent" android:layout_width="wrap_content" android:padding="@dimen/seeable_bergen_size" android:text="@string/graybeard_wesley_duffy" android:textColor="@color/isthmus_alfred_dutchman" android:textSize="26sp"/>
<Button android:background="@color/merritt_breakage_fillet" android:hint="@string/astronautic_bonze_ponce" android:id="@+id/fiftyNeuronView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/focus_disturb_appropriate_epitaxy" android:textColor="#88870E" android:textSize="@dimen/team_visor_textsize"/>
<AutoCompleteTextView android:background="#182ACA19" android:hint="@string/polarograph_pulmonary_airplane_catchup" android:id="@+id/agendaView" android:layout_height="wrap_content" android:layout_margin="@dimen/evangel_myocardium_size" android:layout_width="wrap_content" android:text="@string/pyroxene_passenger_snuff" android:textColor="@color/dipping_consultation_supplementary" android:textSize="@dimen/sideway_standeth_textsize"/>
<CheckedTextView android:hint="@string/exceed_directory_mercedes" android:id="@+id/cursorView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/oath_anomie_creak_tenebrous" android:textColor="@color/helix_calibrate"/>
<CheckedTextView android:background="@color/quixote_cheeky" android:hint="@string/pallet_silicide_blandish_lukewarm" android:id="@+id/salutationView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/doubtful_claudia_shibboleth_mustache" android:textColor="#08C13D"/>
</LinearLayout>
</LinearLayout>
<AutoCompleteTextView android:background="@color/perfusion_infringe_hard" android:hint="@string/cryptanalytic_empower_lubricate" android:id="@+id/illogicView" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingEnd="@dimen/dissociate_gabbing" android:paddingStart="@dimen/surcease_midwinter" android:text="@string/nominal_ghostly_accessory_incapable" app:layout_constraintBottom_toTopOf="@id/druidElmerView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/lawbreakOctaneLayout"/>
<AutoCompleteTextView android:background="@color/groat_centerline_glorious" android:hint="@string/value_isotopic_precipitous_freeboot" android:id="@+id/druidElmerView" android:layout_height="wrap_content" android:layout_width="@dimen/filmy_bewhisker_width" android:text="@string/villein_bateman_handful_focal" android:textColor="@color/macho_capetown_tubular" app:layout_constraintBottom_toTopOf="@id/charlotteWarmheartedView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/illogicView"/>
<CheckBox android:background="@color/blaine_chinook" android:hint="@string/perimeter_monarch_vitrify" android:id="@+id/charlotteWarmheartedView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/dull_omelet_enlarge" android:textColor="@color/authenticate_emory" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/druidElmerView"/>
</androidx.constraintlayout.widget.ConstraintLayout>
