<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
<CheckedTextView android:background="@color/persian_oracle_preachy" android:hint="@string/confusion_adkins_apron_dehydrate" android:id="@+id/insatiableView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/penumbral_casanova_ripple" android:textColor="@color/donnybrook_easternmost" app:layout_constraintBottom_toTopOf="@id/ligandFuneraryView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
<Button android:background="@color/perfume_neater" android:hint="@string/recursive_boyar_finish_armillaria" android:id="@+id/ligandFuneraryView" android:layout_height="wrap_content" android:layout_margin="20dp" android:layout_width="wrap_content" android:text="@string/kinkajou_bushland_diurnal" android:textSize="@dimen/stifle_barrymore_textsize" app:layout_constraintBottom_toTopOf="@id/spiderwortIncomprehensibleView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/insatiableView"/>
<TextView android:background="@color/perfusion_infringe_hard" android:hint="@string/pilfer_ritter_noisome_windsurf" android:id="@+id/spiderwortIncomprehensibleView" android:layout_height="wrap_content" android:layout_margin="30dp" android:layout_width="@dimen/xenon_triphenylphosphine" android:text="@string/fetter_anion_spinster" android:textColor="#5F9D81" android:textSize="@dimen/excision_loire_textsize" app:layout_constraintBottom_toTopOf="@id/northrupLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ligandFuneraryView"/>
<LinearLayout android:gravity="center_horizontal" android:id="@+id/northrupLayout" android:layout_height="wrap_content" android:layout_width="@dimen/decide_radiology_size" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/mcgrathUpswingView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/spiderwortIncomprehensibleView">
<CheckedTextView android:background="@color/grandchildren_morphine_feminist" android:hint="@string/zeroes_windy_cepheus_quandary" android:id="@+id/alveoliQuerulousView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/hanoi_ilona_molecular_reykjavik" android:textColor="@color/releasable_ellsworth_whorl"/>
<Button android:background="#0D7CBA48" android:hint="@string/sprig_postmaster_eugenia" android:id="@+id/loinclothView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/peloponnese_soapsud_haploidy_obstinacy"/>
<Button android:background="@color/asheville_sleepy" android:hint="@string/sedition_filth_scenery_fractal" android:id="@+id/thermopileView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/professor_milwaukee_cowbell" android:textColor="@color/reflectance_basophilic_eerily" android:textSize="@dimen/aquarium_jute_textsize"/>
<CheckBox android:background="@color/anaglyph_nautical_toolkit" android:hint="@string/solstice_kirchner_pity" android:id="@+id/illustrateBotswanaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/enable_loblolly_funky" android:textColor="@color/tear_adulterate"/>
<CheckBox android:hint="@string/glisten_workstation_polymer" android:id="@+id/grandnephewView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/unit_repute_size" android:layout_marginEnd="28dp" android:layout_marginStart="@dimen/ogle_visionary_padding" android:layout_marginTop="@dimen/impromptu_loamy_height" android:layout_width="match_parent" android:text="@string/muskrat_campus_lest_homebound" android:textColor="#9D206F1B"/>
<TextView android:hint="@string/certitude_sidestepped_infima" android:id="@+id/finessingView" android:layout_height="wrap_content" android:layout_margin="@dimen/fundraise_monogamy_size" android:layout_width="wrap_content" android:text="@string/democrat_clubroom_embryo" android:textColor="@color/wagonload_bookworm_dichotomous"/>
<TextView android:background="@color/risible_transmutation_upper" android:hint="@string/liven_esprit_gala_atlantica" android:id="@+id/stantonView" android:layout_height="wrap_content" android:layout_margin="@dimen/internescine_hitachi_padding" android:layout_width="wrap_content" android:text="@string/juxtaposition_counterrevolution_tinny" android:textColor="#498CAE"/>
<EditText android:background="#E798C016" android:hint="@string/intimacy_regrettable_portico" android:id="@+id/dactylView" android:inputType="textMultiLine" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/allotted_schlieren_noodle" android:textColor="@color/ahoy_caliber_staunton"/>
<CheckedTextView android:background="@color/ahoy_caliber_staunton" android:hint="@string/sweatband_accessory_grebe_situs" android:id="@+id/trellisView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/madison_wrestle_height" android:layout_marginTop="@dimen/willowy_adsorptive" android:layout_width="wrap_content" android:text="@string/suzuki_flanders_amplitude" android:textColor="@color/hungary_contravariant_paragraph" android:textSize="@dimen/gardenia_professional_textsize"/>
<CheckedTextView android:background="@color/transposable_offenbach_mortgage" android:hint="@string/diathermy_grist_palaeontology_trench" android:id="@+id/dysenteryView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/aleck_lichen_precipitate_shenandoah" android:textColor="@color/authenticate_emory"/>
<Button android:background="@color/transposable_offenbach_mortgage" android:hint="@string/zeiss_maniacal_bonaparte" android:id="@+id/euclidView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/wobble_clytemnestra_folio" android:textColor="#DAEA35"/>
</LinearLayout>
<CheckBox android:background="@color/sock_runny_opal" android:hint="@string/eddie_public_involuntary" android:id="@+id/mcgrathUpswingView" android:layout_height="wrap_content" android:layout_width="@dimen/franz_peaceable_height" android:text="@string/draco_newborn_lotte_alien" android:textSize="@dimen/brainard_cowhide_textsize" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/northrupLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
